Fix wrap

--- a/css/style.css
+++ b/css/style.css
@@ -493,6 +493,7 @@ a.card:active {
   justify-content: space-evenly;
   align-items: stretch;
   flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
   margin-top: 30px;
 }
